# Math374P3

./: Live Instance with Streamlit.url  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt  streamlit.toml  streamlit_app.py
Modules/: __init__.py  gauss_scaled.py  report.py  visualization.py
assets/: custom.css
docs/: Project3.md  requirements.md  tasks.md  technical_specification.md
reports/: Project 3 - 3x3 Matrix.md  Project 3 - 4x4 matrix.md
src/: __init__.py  gauss_sp.py
tests/: conftest.py  test_gauss_scaled.py  test_gauss_sp.py
