[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaussian-elimination-demo"
version = "1.0.0"
description = "Interactive demonstration of Gaussian elimination with scaled partial pivoting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "John Akujobi", email = "john.akujobi@sdstate.edu"}
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "streamlit>=1.24.1",
    "markdown>=3.4.1",
    "weasyprint>=55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
